@@ -1,5 +1,15 @@
 2003-04-07  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* kb/atom.cpp :
+	* kb/atom.h :
+	* kb/expression.cpp :
+	* kb/expression.h :
+	* kb/transtab.cpp :
+	* kb/transtab.h :
+
+	  - Added replace() functions to replace instances of variables with
+	    identifiers.
+
 	* kb/kb.cpp :
 
 	  - Added constraints in generate_nlp().
